# cpp-base-cmake

./: CMakeLists.txt  README.md  build.sh
src/include/: hello.hpp
src/source/: hello.cpp
